fixed the spacing in the footer section

--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,11 @@
 /**********************/
 
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.8rem 0;
+}
+
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
 }
 
 .logo-col {
